# easy-mailer

./: Cargo.toml  LICENSE  README.md  config.template.toml
src/: client.rs  config.rs  email.rs  main.rs
src/routes/: mod.rs
src/templates/: email_template.hbs
