[package]
name = "easy-mailer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
handlebars = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
tokio = { version = "1", features = ["full"] }
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"] }
toml = "0.5"
reqwest = { version = "0.11", features = ["json"] }
actix-cors = "0.6.4"
chrono = "0.4"
